k8s/kustomize/service-b/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: b
  labels:
    istio-injection: enabled
