k8s/kustomize/service-b/deployment-canary.yaml
---
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-b-canary
  labels:
    # ! Important, this should be the same as the one in the service-b deployment
    app: service-b
    version: canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-b
  template:
    metadata:
      labels:
        app: service-b
        version: canary
    spec:
      containers:
        - name: service-b-canary
          image: torbendury/service-b-canary:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 1
            periodSeconds: 5
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 3
