k8s/kustomize/service-b/service.yaml
# service
---
apiVersion: v1
kind: Service
metadata:
  name: service-b
spec:
  selector:
    app: service-b
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
