k8s/kustomize/service-b/virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-b
spec:
  hosts:
    - service-b.b.svc.cluster.local
  http:
    - route:
        - destination:
            host: service-b.b.svc.cluster.local
            subset: stable
          weight: 90
        - destination:
            host: service-b.b.svc.cluster.local
            subset: canary
          weight: 10
